Refactor handlers to OpenAPI format
